# brazelian-e-commerce-data-pipeline

./: .env.example  .gitignore  README.md  dbt_project.yml  main.py  pyproject.toml  requirements.txt
Brazelian_E_Commerce/: .user.yml  dbt_project.yml
Brazelian_E_Commerce/macros/: generate_surrogate_key.sql
Brazelian_E_Commerce/models/marts/: schema.yml
Brazelian_E_Commerce/models/marts/dimensions/: dim_customer.sql  dim_date.sql  dim_geolocation.sql  dim_product.sql  dim_seller.sql
Brazelian_E_Commerce/models/marts/facts/: fact_sales.sql
Brazelian_E_Commerce/models/staging/: schema.yml  sources.yml  stg_category_translation.sql  stg_customers.sql  stg_geolocation.sql  stg_order_items.sql  stg_order_reviews.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_sellers.sql
Brazelian_E_Commerce/snapshots/: snap_customer.sql
airflow_orchestration/: .env.example  docker-compose.yaml
airflow_orchestration/config/: airflow.cfg
airflow_orchestration/dags/: ecommerce_pipeline_dag.py
data_generation/: generate_weekly_data.py
data_loader/: data_loader.py
snowflake/setup/: 01_warehouse.sql  02_databases.sql  03_roles.sql  04_schemas.sql  05_bronze_tables.sql  06_stage.sql
